# gtest_demo

./: CMakeLists.txt  README.md
include/gtest_demo/: .gtest_demo.h.swp  gtest_demo.h
src/: gtest_demo.cpp  main.cpp
test/: .gtest_demo_test.cpp.swp  gtest_demo_test.cpp
